syntax = "proto3";

package pstat;

option go_package="github.com/lgylgy/rinkgo/pkg/services/pstat";

import "google/protobuf/empty.proto";

service PStatService{
    rpc ListPlayers(google.protobuf.Empty) returns (Players);
    rpc GetHistory(Request) returns (History);
}

message Players {
    repeated History players = 1;
}

message Request {
    int32 playerID = 1;
}

message History {
    int32 playerID         = 1;
    string name            = 2;
    repeated Entry entries = 3;
}

message Entry {
    string season = 1;
    string team   = 2;
    string event  = 3;
    int32 matchs  = 4;
    int32 goals   = 6;
}
